# Master-Thesis-eVTOL

./: .gitignore  MapPlot.jl  ModelFromPaper.jl  ModelFromPaper_ExternalData.jl  ModelFromPaper_ExternalData_Gurobi.jl  ModelFromPaper_ExternalData_LonLat.jl  ModelFromPaper_ExternalData_LonLat_Folium.jl  Test.jl  Test2.jl  drive_time_cache.csv  environment_experiment2.yml  graph.dot  heuristikplot.py  heurstikseg3.py  map.html  mappppp.html  overview.py  overviewplot.py  pyproject.toml  requirements.txt  scenario_generation.jl  system_fig_2.py
Branche/: Branche.xlsx  Branche1.xlsx  VirksomhederBranche.ipynb  brancher.docx
Data/: BiggerData.jl  Denmark_FictiveData_LonLat.jl  model_data.jl
DataGen/: AntalErhvervstureMellemKommuner_GMM_Basis2025.xlsx  Book2.xlsx
Færge/: FaergeOD.ipynb  FærgeOD.html
HanSong_Model/: Model.jl  OUR Model 5Min.jl  OUR Model.jl  animate_solution_plotly.py  infrastructure.csv  inputData.xlsx  inputDataBig.xlsx  solution_animation.html  solution_animationGiant.html  solution_snapshots.csv
Heuristic/: Functions copy Jonas copy Sille.jl  Functions copy Jonas.jl  Functions copy Sille v2.jl  Functions copy Sille.jl  Functions copy.jl  Functions.jl  Functions_ASBB.jl  MainCall.jl  OUR Model.jl  RunHeuristicBoxplot.jl  TEST AREA Jonas.jl  animate_solution_plotly_heuristic.py  inputData.xlsx
Prototype_Example/: ModelFromPaper_ExternalData_LonLat_Folium.jl  main.py
Stochastic/: Experiment1_sizes (1).jl  Experiment1_sizes.jl  Experiment2_realised.jl  Experiment3_vss_evpi.jl  InitialSolFunc.jl  MainCall_stochastic.jl  OUR_Model_stochastic.jl  (+32 more)
(+143 files in other folders)
